# rust-solutions

cutr/: Cargo.toml
cutr/src/: lib.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: lib.rs
findr/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
hello/tests/: cli.rs
rat/: Cargo.toml
rat/src/: lib.rs  main.rs
rat/tests/: cli.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs  main.rs
wcr/: Cargo.toml
wcr/src/: lib.rs  main.rs
