[package]
name = "wcr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.78"
assert_cmd = "2.0.12"
predicates = "3.0.4"
rand = "0.8.5"
